--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>imageimage</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="image.html" href="image.html">
     </head>
     <body>
       <header id="nav-menu">
@@ -76,6 +77,7 @@
                         </div>
                       </li>
                       <li>
+                        <a href="login.html">
                           <button 
                             class="nav-link dropdown-btn" 
                             data-dropdown="dropdown2" 
@@ -83,6 +85,7 @@
                               log in
                             <i class="bx bx-chevron-down" aria-hidden="true"></i>
                           </button>
+                        </a>
                           <div id="dropdown2" class="dropdown"></div>
                       </li>
                       <li><a class="nav-link" href="image.html/">upload</a></li>
@@ -96,6 +99,14 @@
           </div>
         </div>
       </header>
+      <div>
+        <img src="img1.jpg" alt="HTML5 Icon" width="128" height="128">
+        <img src="img2.jpg" alt="HTML5 Icon" width="128" height="128">
+        <img src="img3.jpg" alt="HTML5 Icon" width="128" height="128">
+        <img src="img4.jpg" alt="HTML5 Icon" width="128" height="128">
+        <img src="img5.jpg" alt="HTML5 Icon" width="128" height="128">
+        <img src="img6.jpg" alt="HTML5 Icon" width="128" height="128">
+      </div>
       <script src="script.js"></script>
     </body>
 </html>
