--- a/login.html
+++ b/login.html
@@ -26,7 +26,9 @@
     </form>
    </div>
  <div id="container">
+    <a href="image.html">
     <button type="button" class="btn btn-primary">next</button>
+    </a>
  </div>
   <script src="script.js"></script>
 </body>
