--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <h1> create a profile</h1>
-    <form>
+    <form action="http://127.0.0.1:5500/reminder/image.html">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br>
