--- a/image.html
+++ b/image.html
@@ -101,7 +101,18 @@
                       </a>
                         <div id="dropdown2" class="dropdown"></div>
                     </li>
-                    <li><a class="nav-link" href="image.html/">upload</a></li>
+                    <li>
+                      <a href="signup.html">
+                        <button 
+                          class="nav-link dropdown-btn" 
+                          data-dropdown="dropdown2" 
+                          aria-expanded="false">
+                            sign up
+                          <i class="bx bx-chevron-down" aria-hidden="true"></i>
+                        </button>
+                      </a>
+                        <div id="dropdown2" class="dropdown"></div>
+                    </li>
                     <li><a class="nav-link" href="/">Livestream</a></li>
                     <li><a class="nav-link" href="/">About</a></li>
                 </ul>
