modified my login and signup page

--- a/image.html
+++ b/image.html
@@ -124,10 +124,12 @@
       </div>
     </header>
   </div>
-  <div id="uploadForm">
-    <label id="imlabel"> Upload Images</label><br><br>
+  <div class="uploadForm">
+    <h2 id="imlabel"> Upload Images</h2><br><br>
+    <div class="inputbox">
     <input type="file" id="fileInput" multiple>
     <button id="uploadbtn" onclick="uploadImages()">Upload</button>
+    </div>
   </div>
   <div id="imageContainer"></div>
   <script src="script.js"></script>
