--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="image.html" href="image.html">
     </head>
-    <body>
+    <body class="index">
       <header id="nav-menu">
         <div class="container">
           <div class="nav-start">
