--- a/login.html
+++ b/login.html
@@ -4,47 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="forms.css">
 </head>
-<body>
-  <div>
-    <h3>login</h3>
-    <formform ="Login_form" onsubmit="submit_form()"></formform>
-    <form action="http://127.0.0.1:5500/reminder/image.html" class="row g-3">
-     <div class="col-md-6"></div>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-     </div>
-     <div class="col-md-6">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-     </div>
-     <div class="col-12">
-      <label for="password">Password:</label>
-      <input  type="text" id="password" name="password"  required>
-    </div>
-    <div class="col-12">
-      <label for="username">Username: </label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">login</button>
-    </div>  
-    
-    </form>
-   </div>
- <div id="container">
-    <a href="signup.html">
-    <button type="button" class="btn btn-primary">sign up</button>
-    </a>
- </div>
-  <script type="text/javascript">
-    function submit_form(){  
-alert("Login successfully");  
-}  
-function create(){  
-window.location="signup.html";  
-}  
+<script language="JavaScript" type="text/javascript">
+  function login(showhide){
+  if(showhide == "show"){
+      document.getElementById('form-popup').style.visibility="visible";
+  }else if(showhide == "hide"){
+      document.getElementById('form-popup').style.visibility="hidden"; 
+  }
+  }
   </script>
+<body>
+  <div class="wrapper">
+    <form action="http://127.0.0.1:5500/imageapp/image.html" class="row g-3">
+      <h1> Log in</h1>
+      <div class="inputbox">
+        <input type="text" required>
+        <label for="">Username</label>
+      </div>
+      <div class="inputbox">
+        <input type="email" required>
+        <label for="">Email</label>
+      </div>
+      <div class="inputbox">
+        <input type="password" required>
+        <label for="">Password</label>
+      </div>
+      <div class="forget">
+        <label for=" remember">
+          <input type="checkbox" id="remeber">
+          <p>Remember me</p>
+        </label>
+        <a href="#">Forgot password?</a>
+      </div>
+      <button type="submit" class="btn btn-primary">Login</button>
+      <div class="register">
+        <p>
+          Don't have an accout?
+          <a href="signup.html">Signup</a>
+        </p>
+     </div>
+      <script type="text/javascript">
+        
+        function submit_form(){  
+    alert("Login successfully");  
+    }  
+    function create(){  
+    window.location="signup.html";  
+    }  
+      </script>
+    </form>
+  </div>
+  
 </body>
 </html>
